# advent-of-code

./: .gitignore  README.md  pyproject.toml
aoc/: advent.py
aoc/2023/01/: part1.py  part2.py
aoc/2023/02/: part1.py  part2.py
aoc/2023/03/: part1.py  part2.py
aoc/2023/18/: part1.py  part2.py
aoc/2023/19/: part1.py  part2.py
aoc/2023/20/: part1.py  part2.py
aoc/2023/21/: part1.py  part2.py
aoc/2023/22/: part1.py  part2.py
aoc/2024/01/: part1.py  part2.py
aoc/2024/02/: part1.py  part2.py
aoc/2024/03/: part1.py  part2.py
aoc/utils/: __init__.py  helper.py  structure.py
